modified know.html to knowResult files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,32 @@
     <title>Akan-Way</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="header"></div>
+        <div class="main">
+            <div class="main-content">
+                <p class="heading"><span>Akan</span> Names</p>
+                <p class="content"><br>
+                <h2>Africans are indistinguishable in the world. This is because of the culture tradition they have
+                    maintained. Akan in Ghana, pride themselves with their unique naming style. <br>
+                    For example a child's name is based on the day of the week they are
+                    born. </h2><br>
+
+
+                Are you curious to know yours?
+                </h2>
+                <a href="./result.html"> <br>
+                    <div class="btn">
+                        <p>Know Your Akan Name Now</p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+    </div>
+
 
 
 
@@ -23,4 +48,5 @@
 
     <script src="./js/index.js"></script>
 </body>
+
 </html>
