added link to akan culture

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                     For example a child's name is based on the day of the week they are
                     born. </h2><br>
 
-
-                Are you curious to know yours?
+                <h2>Read more about Akan Culture
+                    <a href="http://www2.hsp.org/exhibits/Balch%20exhibits/rites/akan.html" target="_blank">
+                        <span>HERE.</span></a> <br>
+                    Are you curious to know yours?
                 </h2>
                 <a href="./result.html"> <br>
                     <div class="btn">
