added image in main page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                     </div>
                 </a>
             </div>
-
+            <div class="hero-img">
+                <img src="/woman-removebg-preview.png" alt="african-lady" />
+            </div>
         </div>
     </div>
 
