--- a/knowResult.html
+++ b/knowResult.html
@@ -10,13 +10,31 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="header">
+            <a href="./index.html"></a>
 
+            <a href="index.html"> <span>Home</span> </a>
+        </div>
+        <div class="main">
+            <div class="main-content">
+                <p class="content-heading">Enter Your <span>Birth Details</span> </p>
+                <input id="dob" type="date" />
 
+                <p class="content-heading">Select <span>Gender</span> </p>
+                <div class="gender-select">
+                    <div>
+                        <label><input type="radio" name="genderRadio" id="maleRadio" value="Male" />Male</label>
+                    </div>
+                    <div>
+                        <label><input type="radio" name="genderRadio" id="femaleRadio" value="Female" />Female</label>
+                    </div>
+                </div>
 
+            </div>
 
-
-
-
+        </div>
+    </div>
 
     <script src="./js/index.js"></script>
 
