--- a/knowResult.html
+++ b/knowResult.html
@@ -30,7 +30,10 @@
                         <label><input type="radio" name="genderRadio" id="femaleRadio" value="Female" />Female</label>
                     </div>
                 </div>
-
+                <div class="btn" onclick="buttonRead()">
+                    <p>SUBMIT</p>
+                </div>
+                <p id="display"></p>
             </div>
 
         </div>
