--- a/knowResult.html
+++ b/knowResult.html
@@ -35,7 +35,9 @@
                 </div>
                 <p id="display"></p>
             </div>
-
+            <div class="image">
+                <img src="/man-cry-removebg-preview.png" alt="" />
+            </div>
         </div>
     </div>
 
