added link in html files

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                         <span>HERE.</span></a> <br>
                     Are you curious to know yours?
                 </h2>
-                <a href="./result.html"> <br>
+                <a href="./knowResult.html"> <br>
                     <div class="btn">
                         <p>Know Your Akan Name Now</p>
                     </div>
                 </a>
             </div>
             <div class="hero-img">
-                <img src="/woman-removebg-preview.png" alt="african-lady" />
+                <img src="./images/woman-removebg-preview.png" alt="african-lady" />
             </div>
         </div>
     </div>
