--- a/knowResult.html
+++ b/knowResult.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/index.css" />
 </head>
 
 <body>
@@ -18,10 +18,10 @@
         </div>
         <div class="main">
             <div class="main-content">
-                <p class="content-heading">Enter Your <span>Birth Details</span> </p>
+                <p class="content-heading">Enter Your <span>Birth Details</span></p>
                 <input id="dob" type="date" />
 
-                <p class="content-heading">Select <span>Gender</span> </p>
+                <p class="content-heading">Select <span>Gender</span></p>
                 <div class="gender-select">
                     <div>
                         <label><input type="radio" name="genderRadio" id="maleRadio" value="Male" />Male</label>
@@ -36,7 +36,7 @@
                 <p id="display"></p>
             </div>
             <div class="image">
-                <img src="/man-cry-removebg-preview.png" alt="" />
+                <img src="./images/man-cry-removebg-preview.png" alt="man crying" />
             </div>
         </div>
     </div>
