removed image in knowresult file

--- a/knowResult.html
+++ b/knowResult.html
@@ -36,7 +36,7 @@
                 <p id="display"></p>
             </div>
             <div class="image">
-                <img src="./images/man-cry-removebg-preview.png" alt="man crying" />
+                <!-- <img src="./images/me2-removebg-preview.png" alt="man crying" />-->
             </div>
         </div>
     </div>
